src/objects/Delivery_Template_Package_Code_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Delivery_Template_Code__c</fullName>
        <label>Delivery Template Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Delivery Template Package Code Mapping</label>
    <pluralLabel>Delivery Template Package Code Mappings</pluralLabel>
</CustomObject>